--- a/package.json
+++ b/package.json
@@ -1,17 +1,34 @@
 {
-  "name": "modern_portfolio",
+  "name": "project",
   "version": "1.0.0",
-  "description": "Responsive portfolio website",
-  "main": "index.js",
-  "homepage": "https://novus817.github.io/static_responsive_portfolio",
+  "description": "Responsive Portfolio",
+  "main": "dist/index.html",
+  "author": "Anthony M",
+  "homepage": "https://novus817.github.io/responsive_website_portfolio",
   "scripts": {
-    "sass": "node-sass -w scss/ -o dist/css/ --recursive",
+    "build:sass": "sass  --no-source-map src/sass:dist/css",
+    "copy:img": "copyfiles -u 1 ./src/img/**/* dist",
+    "copy:html": "copyfiles -u 1 ./src/*.html dist",
+    "copy": "npm-run-all --parallel copy:*",
+    "watch:img": "onchange \"/src/img/**/*\" -- npm run copy:html",
+    "watch:html": "onchange \"src/*.html\" -- npm run copy:html",
+    "watch:sass": "sass  --no-source-map --watch src/sass:dist/css",
+    "watch": "npm-run-all --parallel watch:*",
+    "serve": "browser-sync start --server dist --files dist",
+    "start": "npm-run-all copy --parallel watch serve",
+    "build": "npm-run-all copy:html build:*",
+    "postbuild": "postcss dist/css/*.css -u autoprefixer cssnano -r --no-map",
     "deploy": "gh-pages -d dist"
   },
-  "author": "Anthony Marrello",
-  "license": "MIT",
   "dependencies": {
-    "gh-pages": "^2.2.0",
-    "node-sass": "^9.0.0"
+    "autoprefixer": "^10.4.14",
+    "browser-sync": "^2.29.3",
+    "copyfiles": "^2.4.1",
+    "cssnano": "^6.0.1",
+    "npm-run-all": "^4.1.5",
+    "onchange": "^7.1.0",
+    "postcss-cli": "^10.1.0",
+    "sass": "^1.62.1",
+    "gh-pages": "^5.0.0"
   }
 }
